--- a/po/pl.po
+++ b/po/pl.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: lxtask 0.1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-23 15:31+0200\n"
-"PO-Revision-Date: 2012-09-09 10:30+0200\n"
-"Last-Translator: Piotr <psokol@jabster.pl>\n"
+"PO-Revision-Date: 2013-08-27 10:24+0000\n"
+"Last-Translator: Piotr <strebski@o2.pl>\n"
 "Language-Team: Polish <>\n"
 "Language: pl\n"
 "MIME-Version: 1.0\n"
@@ -20,7 +20,8 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2);\n"
-"X-Generator: Pootle 2.0.5\n"
+"X-Generator: Pootle 2.5.0\n"
+"X-POOTLE-MTIME: 1377599085.0\n"
 
 #: ../lxtask.desktop.in.h:1 ../src/interface.c:55
 msgid "Task Manager"
@@ -60,7 +61,7 @@ msgstr "Zakończyć proces?"
 
 #: ../src/callbacks.c:86
 msgid "Can't stop process self"
-msgstr ""
+msgstr "Nie można zatrzymać samego procesu"
 
 #: ../src/functions.c:148
 #, c-format
