--- a/po/sr.po
+++ b/po/sr.po
@@ -9,18 +9,18 @@ msgstr ""
 "Project-Id-Version: LXTask x\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-23 15:31+0200\n"
-"PO-Revision-Date: 2012-10-01 16:09+0200\n"
-"Last-Translator: Jay A. <tito.nehru.naser@gmail.com>\n"
+"PO-Revision-Date: 2013-09-06 02:14+0100\n"
+"Last-Translator: Jay A.Fleming <tito.nehru.naser@gmail.com>\n"
 "Language-Team: \n"
 "Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
-"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Pootle 2.0.5\n"
 
-#: ../lxtask.desktop.in.h:1 ../src/interface.c:55
+#: ../lxtask.desktop.in.h:1
+#: ../src/interface.c:55
 msgid "Task Manager"
 msgstr "Праћење система"
 
@@ -39,27 +39,26 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
-"Не може се послати %d сигнал до процеса са ИБ %d\n"
+"Не може да се пошаље сигнал %d до процеса са ИД %d\n"
 "\n"
 "%s"
 
 #: ../src/xfce-taskmanager-linux.c:298
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr "Не може се поставити приоритет %d за процес са ИБ %d"
+msgstr "Не може да се постави приоритет %d за процес са ИД %d"
 
 #: ../src/callbacks.c:58
 msgid "Really kill the task?"
-msgstr "Желите ли да убијете овај процес?"
+msgstr "Да ли желите да убијете овај процес?"
 
 #: ../src/callbacks.c:62
 msgid "Really terminate the task?"
-msgstr "Желите ли да зауставите овај процес?"
+msgstr "Да ли желите да зауставите овај процес?"
 
 #: ../src/callbacks.c:86
-#, fuzzy
 msgid "Can't stop process self"
-msgstr "Процес не може сам себе зауставити"
+msgstr "Процес не може сам себе да заустави"
 
 #: ../src/functions.c:148
 #, c-format
@@ -117,7 +116,7 @@ msgstr "Вел. вирт. меморије"
 
 #: ../src/interface.c:222
 msgid "PID"
-msgstr "ИБ"
+msgstr "ПИД"
 
 #: ../src/interface.c:228
 msgid "State"
@@ -129,7 +128,7 @@ msgstr "Приоритет"
 
 #: ../src/interface.c:240
 msgid "PPID"
-msgstr "ПИБ"
+msgstr "ППИД"
 
 #: ../src/interface.c:256
 msgid "Stop"
@@ -196,7 +195,7 @@ msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
-"Програм „LXTask“ је изведен из „Xfce4 Task Manager“ програма.\n"
+"Програм „Праћење система“ (ЛИкс-Таск) је изведен из „Xfce4 Task Manager“ програма.\n"
 "  Приредио: Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace this string with your names, one name per line.
@@ -204,18 +203,19 @@ msgstr ""
 msgid "translator-credits"
 msgstr "Serbian (sr) — Jay A. Fleming <tito.nehru.naser@gmail.com>"
 
-#: ../src/interface.c:401 ../src/interface.c:403
+#: ../src/interface.c:401
+#: ../src/interface.c:403
 msgid "LXTask"
-msgstr "LXTask"
+msgstr "Праћење система"
 
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:406
 msgid "Copyright (C) 2008 LXDE team"
-msgstr "LXDE тим — 2008-2009. Сва права задржана."
+msgstr "ЛИкс-ДЕ тим — 2008-2009. Нека су права задржана."
 
 #: ../src/interface.c:407
 msgid "Lightweight task manager for LXDE project"
-msgstr "Лагани управљач послова за LXDE радно окружење"
+msgstr "Лагани управљач процеса за ЛИкс-ДЕ радно окружење"
 
 #: ../src/interface.c:635
 msgid "Preferences"
@@ -227,7 +227,7 @@ msgstr "Опште"
 
 #: ../src/interface.c:640
 msgid "Refresh rate (seconds):"
-msgstr "Учестаност освежавања (секунди)"
+msgstr "Учестаност освежавања (секунди):"
 
 #: ../src/utils.c:43
 msgid "Error"
@@ -236,3 +236,4 @@ msgstr "Грешка"
 #: ../src/utils.c:56
 msgid "Confirm"
 msgstr "Потврдa"
+
