--- a/po/sr@latin.po
+++ b/po/sr@latin.po
@@ -9,17 +9,18 @@ msgstr ""
 "Project-Id-Version: LXTask x\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-23 15:31+0200\n"
-"PO-Revision-Date: 2009-09-08 15:36+0100\n"
-"Last-Translator: Jay A. Fleming <tito.nehru.naser@gmail.com>\n"
+"PO-Revision-Date: 2013-09-06 02:14+0100\n"
+"Last-Translator: Jay A.Fleming <tito.nehru.naser@gmail.com>\n"
 "Language-Team: \n"
-"Language: \n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"X-Generator: Pootle 2.0.5\n"
 
-#: ../lxtask.desktop.in.h:1 ../src/interface.c:55
+#: ../lxtask.desktop.in.h:1
+#: ../src/interface.c:55
 msgid "Task Manager"
 msgstr "Praćenje sistema"
 
@@ -29,7 +30,7 @@ msgstr "Upravljanje pokrenutim procesima"
 
 #: ../lxtask.desktop.in.h:3
 msgid "Process manager"
-msgstr "Upravljač procesima"
+msgstr "Upravljač procesa"
 
 #: ../src/xfce-taskmanager-linux.c:284
 #, c-format
@@ -38,26 +39,26 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
-"Ne može se poslati %d signal do procesa sa IB %d\n"
+"Ne može da se pošalje signal %d do procesa sa ID %d\n"
 "\n"
 "%s"
 
 #: ../src/xfce-taskmanager-linux.c:298
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr "Ne može se postaviti prioritet %d za proces sa IB %d"
+msgstr "Ne može da se postavi prioritet %d za proces sa ID %d"
 
 #: ../src/callbacks.c:58
 msgid "Really kill the task?"
-msgstr "Želite li da ubijete ovaj proces?"
+msgstr "Da li želite da ubijete ovaj proces?"
 
 #: ../src/callbacks.c:62
 msgid "Really terminate the task?"
-msgstr "Želite li da zaustavite ovaj proces?"
+msgstr "Da li želite da zaustavite ovaj proces?"
 
 #: ../src/callbacks.c:86
 msgid "Can't stop process self"
-msgstr ""
+msgstr "Proces ne može sam sebe da zaustavi"
 
 #: ../src/functions.c:148
 #, c-format
@@ -115,7 +116,7 @@ msgstr "Vel. virt. memorije"
 
 #: ../src/interface.c:222
 msgid "PID"
-msgstr "IB"
+msgstr "PID"
 
 #: ../src/interface.c:228
 msgid "State"
@@ -127,7 +128,7 @@ msgstr "Prioritet"
 
 #: ../src/interface.c:240
 msgid "PPID"
-msgstr "IB-R"
+msgstr "PPID"
 
 #: ../src/interface.c:256
 msgid "Stop"
@@ -183,7 +184,7 @@ msgstr "Prikaži ostale procese"
 
 #: ../src/interface.c:350
 msgid "Show full cmdline"
-msgstr ""
+msgstr "Prikaži punu liniju naredbe"
 
 #: ../src/interface.c:355
 msgid "Show memory used by cache as free"
@@ -194,7 +195,7 @@ msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
-"Program „LXTask“ je izveden iz „Xfce4 Task Manager“ programa.\n"
+"Program „Praćenje sistema“ (LIks-Task) je izveden iz „Xfce4 Task Manager“ programa.\n"
 "  Priredio: Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace this string with your names, one name per line.
@@ -202,18 +203,19 @@ msgstr ""
 msgid "translator-credits"
 msgstr "Serbian (sr) — Jay A. Fleming <tito.nehru.naser@gmail.com>"
 
-#: ../src/interface.c:401 ../src/interface.c:403
+#: ../src/interface.c:401
+#: ../src/interface.c:403
 msgid "LXTask"
-msgstr "LXTask"
+msgstr "Praćenje sistema"
 
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:406
 msgid "Copyright (C) 2008 LXDE team"
-msgstr "LXDE tim — 2008-2009. Sva prava zadržana."
+msgstr "LIks-DE tim — 2008-2009. Neka su prava zadržana."
 
 #: ../src/interface.c:407
 msgid "Lightweight task manager for LXDE project"
-msgstr "Lagani upravljač poslova za LXDE radno okruženje"
+msgstr "Lagani upravljač procesa za LIks-DE radno okruženje"
 
 #: ../src/interface.c:635
 msgid "Preferences"
@@ -225,7 +227,7 @@ msgstr "Opšte"
 
 #: ../src/interface.c:640
 msgid "Refresh rate (seconds):"
-msgstr "Učestanost osvežavanja (sekundi)"
+msgstr "Učestanost osvežavanja (sekundi):"
 
 #: ../src/utils.c:43
 msgid "Error"
@@ -234,3 +236,4 @@ msgstr "Greška"
 #: ../src/utils.c:56
 msgid "Confirm"
 msgstr "Potvrda"
+
