--- a/po/et.po
+++ b/po/et.po
@@ -3,21 +3,21 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # Mattias Põldaru <mahfiaz gmail com>, 2009.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-11-13 23:42+0100\n"
-"PO-Revision-Date: 2012-09-24 21:08+0200\n"
-"Last-Translator: Anari <anari.jalakas@gmail.com>\n"
+"PO-Revision-Date: 2013-12-18 11:24+0000\n"
+"Last-Translator: mahfiaz <mahfiaz@gmail.com>\n"
 "Language-Team: Gnome Estonian Translation Team <gnome-et linux ee>\n"
 "Language: et\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Pootle 2.0.5\n"
+"X-Generator: Pootle 2.5.0\n"
+"X-POOTLE-MTIME: 1387365846.0\n"
 
 #: ../lxtask.desktop.in.h:1 ../src/interface.c:55
 msgid "Task Manager"
@@ -57,7 +57,7 @@ msgstr "Kas see protsess tõesti lõpetada?"
 
 #: ../src/callbacks.c:86
 msgid "Can't stop process self"
-msgstr "Ei saa lõpetada protsessi ennast"
+msgstr "Protsessi ennast pole võimalik lõpetada"
 
 #: ../src/functions.c:148
 #, c-format
@@ -79,7 +79,7 @@ msgstr "_Vaade"
 
 #: ../src/interface.c:97
 msgid "_Help"
-msgstr "_Abi"
+msgstr "A_bi"
 
 #: ../src/interface.c:124
 msgid "cpu usage"
