--- a/po/tr.po
+++ b/po/tr.po
@@ -2,21 +2,21 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-11-13 23:42+0100\n"
-"PO-Revision-Date: 2012-10-08 12:37+0200\n"
-"Last-Translator: Necdet <necdetyucel@gmail.com>\n"
+"PO-Revision-Date: 2013-11-05 09:53+0000\n"
+"Last-Translator: nyucel <necdetyucel@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Pootle 2.0.5\n"
+"X-Generator: Pootle 2.5.0\n"
+"X-POOTLE-MTIME: 1383645210.0\n"
 
 #: ../lxtask.desktop.in.h:1 ../src/interface.c:55
 msgid "Task Manager"
@@ -44,7 +44,7 @@ msgstr ""
 #: ../src/xfce-taskmanager-linux.c:299
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr "%d önceliği %d kimlikli göreve %d önceliği atanamadı"
+msgstr "%d kimlikli göreve %d önceliği atanamadı"
 
 #: ../src/callbacks.c:58
 msgid "Really kill the task?"
@@ -61,12 +61,12 @@ msgstr "Süreç sonlandırılamadı"
 #: ../src/functions.c:148
 #, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr "Bellekte Kullanılan: %d MB Toplam: %d MB "
+msgstr "Bellek: %d MB dolu, kapasite: %d MB"
 
 #: ../src/functions.c:156
 #, c-format
 msgid "CPU usage: %0.0f %%"
-msgstr "İşlemci kullanımı: %0.0f %%"
+msgstr "CPU kullanımı: %0.0f %%"
 
 #: ../src/interface.c:70
 msgid "_File"
@@ -102,7 +102,7 @@ msgstr "Kullanıcı"
 
 #: ../src/interface.c:204
 msgid "CPU%"
-msgstr "İşlemci%"
+msgstr "CPU%"
 
 #: ../src/interface.c:210
 msgid "RSS"
@@ -193,7 +193,7 @@ msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
-"LXTask Xfce4 Görev Yöneticisinden türetildi. Türeten:\n"
+"LXTask Xfce4 Görev Yöneticisinden türetildi:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace this string with your names, one name per line.
