--- a/po/nl.po
+++ b/po/nl.po
@@ -4,13 +4,12 @@
 # lxtask package.
 # Stephan Arts, 2007.
 # Pjotr, 2011.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-11-13 23:42+0100\n"
-"PO-Revision-Date: 2012-09-25 23:15+0200\n"
+"PO-Revision-Date: 2014-01-28 14:24+0000\n"
 "Last-Translator: Pjotr <pjotrvertaalt@gmail.com>\n"
 "Language-Team: Dutch\n"
 "Language: nl\n"
@@ -18,7 +17,8 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Pootle 2.0.5\n"
+"X-Generator: Pootle 2.5.0\n"
+"X-POOTLE-MTIME: 1390919043.0\n"
 
 #: ../lxtask.desktop.in.h:1 ../src/interface.c:55
 msgid "Task Manager"
@@ -112,7 +112,7 @@ msgstr "RSS"
 
 #: ../src/interface.c:216
 msgid "VM-Size"
-msgstr "VM-Grootte"
+msgstr "VM-grootte"
 
 #: ../src/interface.c:222
 msgid "PID"
@@ -188,14 +188,14 @@ msgstr "Toon volledige opdrachtregel"
 
 #: ../src/interface.c:355
 msgid "Show memory used by cache as free"
-msgstr "Toon geheugen dat gebruikt wordt door opslag, als vrij"
+msgstr "Toon geheugen in gebruik als tijdelijke opslag, als vrij"
 
 #: ../src/interface.c:387
 msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
-"LXTask is afgeleid van Xfce4 Taakbeheerder door:\n"
+"LXTask is afgeleid van Xfce4-taakbeheerder door:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace this string with your names, one name per line.
@@ -203,7 +203,7 @@ msgstr ""
 msgid "translator-credits"
 msgstr ""
 "Sander De Voogdt\n"
-"Pjotr"
+"Pjotr <pjotrvertaalt@gmail.com>"
 
 #: ../src/interface.c:401 ../src/interface.c:403
 msgid "LXTask"
@@ -216,7 +216,7 @@ msgstr "Auteursrecht (C) 2008 LXDE-ploeg"
 
 #: ../src/interface.c:407
 msgid "Lightweight task manager for LXDE project"
-msgstr "Lichtgewicht taakbeheerder voor het LXDE-project"
+msgstr "Lichtgewicht-taakbeheerder voor het LXDE-project"
 
 #: ../src/interface.c:635
 msgid "Preferences"
